i changed name details

--- a/index.html
+++ b/index.html
@@ -104,19 +104,20 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Nwaka William</span><br>
+						   <span>Bells University of Technology<br>
+						         Ogun State                        
                      </span><br>
 						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+                     <span>+2349071379025</span>
+                     <span>nwakawilliam87@gmail.com</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://www.instagram.com/1ka_william" class="button" download><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -148,7 +149,7 @@
                <div class="twelve columns">
 
                   <h3>BellsTech</h3>
-                  <p class="info">Computer Science <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <p class="info">Computer Science <span>&bull;</span> <em class="date">SOON</em></p>
 
                   <p>
                   Currently studying
@@ -162,8 +163,8 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Mississipi</h3>
-                  <p class="info">Masters in AI <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>School of Technology, Nigeria</h3>
+                  <p class="info">Masters in AI <span>&bull;</span> <em class="date">SOON</em></p>
 
                   <p>
                   
