--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">My Name is Nwake William</h1>
+            <h1 class="responsive-headline">My Name is Nwaka William</h1>
             <h3>I'm a Lagos based <span>computer science major</span>, <span>basket baller</span> and <span>web developer</span> 
 
                <hr />
